# OpenVSP

./: .gitignore  CHANGELOG.md  LICENSE  OpenVSP 3.30.0_VV.html  README
.github/workflows/: build.yml
Libraries/cmake/: External_Clipper2.cmake  External_FLTK.cmake  External_OpenABF.cmake
examples/scripts/python_scripts/: BertinSmithTest.py  BertinTest.py  Constants.py  Contraints.py  EllipseTest.py  HersheyTest.html  HersheyTest.py  MarkdownTest.MD  MarkdownTest.html  Master_VSP_VV_Script.py  Master_VSP_VV_script_test.py  SuperDeltaTest.py  SweptTest.py  V&V_README.MD  VKTTest.py  WarrenTest.py  bohek_helper.html  bohek_helper.py  matplotlibstuff.py  test.html  testHershey.html  testHershey.py  testTable.html  testTable.py  vsp.html
src/: CMakeLists.txt  Doxyfile.in
src/cfd_mesh/: CfdMeshMgr.cpp  FeaElement.cpp  FeaMesh.cpp  FeaMesh.h  FeaMeshMgr.cpp  ISegChain.cpp  ISegChain.h  Mesh.cpp  MeshAnalysis.cpp  SimpleBC.cpp  SimpleMeshSettings.cpp  SimpleMeshSettings.h  Surf.cpp  Surf.h  SurfaceIntersectionMgr.cpp  SurfaceIntersectionMgr.h
src/cmake/: External_STEPCode.cmake  FindSTEPCODE.cmake  VSP_Version.cmake
src/fltk_screens/: CMakeLists.txt
src/geom_api/: APIDefines.h  APIErrorMgr.cpp  APIErrorMgr.h  APITestSuite.cpp  APITestSuiteCFDMesh.cpp  CMakeLists.txt  GuiInterface.cpp  GuiInterface.h  VSP_Geom_API.cpp  VSP_Geom_API.h  vsp_common.i
src/geom_core/: AdvLinkMgr.cpp  Airfoil.cpp  AnalysisMgr.cpp  AuxiliaryGeom.cpp  AuxiliaryGeom.h  BORGeom.cpp  BORGeom.h  BlankGeom.cpp  BlankGeom.h  CMakeLists.txt  ConformalGeom.cpp  ConformalGeom.h  CustomGeom.cpp  DesignVarMgr.cpp  FeaStructure.cpp  FeaStructure.h  FitModelMgr.cpp  FuselageGeom.cpp  GearGeom.cpp  Geom.cpp  Geom.h  GeometryAnalysisMgr.cpp  GeometryAnalysisMgr.h  HingeGeom.cpp  HingeGeom.h  HumanGeom.cpp  HumanGeom.h  MeshCommonSettings.cpp  MeshCommonSettings.h  MeshGeom.cpp  MeshGeom.h  PGMesh.cpp  Parm.cpp  Parm.h  ProjectionMgr.cpp  ProjectionMgr.h  PropGeom.cpp  ResultsMgr.cpp  ResultsMgr.h  RoutingGeom.cpp  (+19 more)
src/gui_and_draw/: AdvLinkScreen.cpp  AdvLinkScreen.h  AttributeEditor.cpp  AuxiliaryGeomScreen.cpp  AuxiliaryGeomScreen.h  AwaveScreen.cpp  AwaveScreen.h  BORScreen.cpp  BORScreen.h  BlankScreen.cpp  BlankScreen.h  CMakeLists.txt  CfdMeshScreen.cpp  CfdMeshScreen.h  CompGeomScreen.cpp  CompGeomScreen.h  ConformalScreen.cpp  ConformalScreen.h  DegenGeomScreen.cpp  DegenGeomScreen.h  DesignVarScreen.cpp  DoubleSlider.cpp  DoubleSlider.h  Exit.cpp  Exit.h  ExportScreen.cpp  ExportScreen.h  FeaPartEditScreen.cpp  FeaPartEditScreen.h  FeaStructScreen.cpp  FeaStructScreen.h  FuselageScreen.cpp  FuselageScreen.h  GeometryAnalysisScreen.cpp  GeometryAnalysisScreen.h  GroupLayout.cpp  GroupLayout.h  GuiDevice.cpp  GuiDevice.h  GuiDeviceQt.cpp  (+66 more)
src/help/: GeometryAnalysis.md
src/help/html/: AdvLink.html  AttributeExplorer.html  GeometryAnalysis.html  SetEdit.html  StackPresets.html  index.html
src/python_api/: CMakeLists.txt  environment_test.yml  gen_unit_test.py
src/qt_screens/: AboutScreen.ui  AwaveScreen.ui  BackgroundScreen.ui  CfdMeshScreen.ui  CompGeomScreen.ui  DegenGeomScreen.ui  ExportScreen.ui  ImportScreen.ui  ManageGeomScreen.ui  ManageViewScreen.ui  MassPropScreen.ui  PSliceScreen.ui  ParmLinkScreen.ui  PickSetScreen.ui  SetEditorScreen.ui  SliceScreen.ui  TypeEditorScreen.ui
src/test/py/: CMakeLists.txt
src/test/py/tests/: rst_test.py
src/util/: BndBox.cpp  BndBox.h  CADutil.cpp  CMakeLists.txt  ExitStatus.cpp  ExitStatus.h  Matrix4d.cpp  StlHelper.h  Util.cpp  Util.h  UtilTestSuite.cpp  Vec3d.cpp  Vec3d.h  VspCurve.cpp  VspCurve.h  VspSurf.cpp  VspSurf.h  XferSurf.h
src/util_api/: Matrix4d.h
src/vsp/: CMakeLists.txt  main.cpp  main.h.in  propGeom.cpp  propGeom.h  track_ball.cpp  track_ball.h  vspGlWindow.cpp  vspGlWindow.h
src/vsp_aero/Viewer/: CMakeLists.txt
src/vsp_aero/slicer/: CMakeLists.txt
src/vsp_aero/solver/: CMakeLists.txt
src/vsp_aero/viewer/: CMakeLists.txt
src/vsp_graphic/src/: Routing.cpp
