CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(GUI_AND_DRAW_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE PATH "Path to gui_and_draw headers")
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)

INCLUDE_DIRECTORIES( 
    ${NANOFLANN_INCLUDE_DIR}
    ${LIBXML2_INCLUDE_DIR}
    ${XMLVSP_INCLUDE_DIR}
    ${UTIL_INCLUDE_DIR}
    ${GEOM_CORE_INCLUDE_DIR}
    ${CFD_MESH_INCLUDE_DIR}
    ${FLTK_INCLUDE_DIR}
    ${SCREENS_INCLUDE_DIR}
    ${VSP_GRAPHIC_INCLUDE_DIR}
    ${GLEW_INCLUDE_PATH}
    ${GLM_INCLUDE_DIR}
    ${EIGEN3_INCLUDE_DIR}
    ${CodeEli_INCLUDE_DIRS}
    ${PROJECT_SOURCE_DIR}/geom_api
    ${GEOM_API_INCLUDE_DIR}
    ${STEPCODE_INCLUDE_DIR}
    ${GUI_AND_DRAW_INCLUDE_DIR}
)

QT5_WRAP_UI(UI_HEADERS
../qt_screens/AwaveScreen.ui
../qt_screens/CfdMeshScreen.ui
../qt_screens/CompGeomScreen.ui
../qt_screens/ManageViewScreen.ui
../qt_screens/MassPropScreen.ui
../qt_screens/PSliceScreen.ui
../qt_screens/SetEditorScreen.ui
)

ADD_LIBRARY(gui_and_draw
AdvLinkScreen.cpp
AwaveScreen.cpp
BlankScreen.cpp
CfdMeshScreen.cpp
ClippingScreen.cpp
CompGeomScreen.cpp
CustomScreen.cpp
DegenGeomScreen.cpp
DesignVarScreen.cpp
DoubleSlider.cpp
Exit.cpp
ExportScreen.cpp
FeaStructScreen.cpp
FuselageScreen.cpp
GroupLayout.cpp
GuiDevice.cpp
GuiDeviceQt.cpp
ImportScreen.cpp
MainGLWindow.cpp
MainGLWindow.cpp
MainVSPScreen.cpp
ManageBackgroundScreen.cpp
ManageCORScreen.cpp
ManageGeomScreen.cpp
ManageLabelScreen.cpp
ManageLightingScreen.cpp
ManageTextureScreen.cpp
ManageTextureScreen.cpp
ManageViewScreen.cpp
ManageViewScreen.cpp
MassPropScreen.cpp
MaterialEditScreen.cpp
MeshScreen.cpp
ParmDebugScreen.cpp
ParmLinkScreen.cpp
ParmScreen.cpp
PickSetScreen.cpp
PodScreen.cpp
PSliceScreen.cpp
ScreenBase.cpp
ScreenMgr.cpp
SelectFileScreen.cpp
SetEditorScreen.cpp
StackScreen.cpp
SubGLWindow.cpp
SubGLWindow.cpp
TypeEditorScreen.cpp
UserParmScreen.cpp
VspScreen.cpp
VspScreenQt.cpp
VSPWindow.cpp
WingScreen.cpp
AdvLinkScreen.h
AwaveScreen.h
BlankScreen.h
CfdMeshScreen.h
ClippingScreen.h
CompGeomScreen.h
CustomScreen.h
DegenGeomScreen.h
DesignVarScreen.h
DoubleSlider.h
Exit.h
ExportScreen.h
FeaStructScreen.h
FuselageScreen.h
GroupLayout.h
GuiDevice.h
GuiDeviceQt.h
ImportScreen.h
MainGLWindow.h
MainGLWindow.h
MainVSPScreen.h
ManageBackgroundScreen.h
ManageCORScreen.h
ManageGeomScreen.h
ManageLabelScreen.h
ManageLightingScreen.h
ManageTextureScreen.h
ManageTextureScreen.h
ManageViewScreen.h
ManageViewScreen.h
MassPropScreen.h
MaterialEditScreen.h
MeshScreen.h
ParmDebugScreen.h
ParmLinkScreen.h
ParmScreen.h
PickSetScreen.h
PodScreen.h
PSliceScreen.h
ScreenBase.h
ScreenMgr.h
SelectFileScreen.h
SetEditorScreen.h
StackScreen.h
SubGLWindow.h
SubGLWindow.h
TypeEditorScreen.h
UserParmScreen.h
VspScreen.h
VspScreenQt_p.h
VspScreenQt.h
VSPWindow.h
WingScreen.h
${UI_HEADERS}
)

ADD_DEPENDENCIES(gui_and_draw
vsp_graphic
screens
util
)

QT5_USE_MODULES(gui_and_draw Widgets)

TARGET_LINK_LIBRARIES(gui_and_draw
${GLEW_LIBRARY}
vsp_graphic
)
